feat: ENS integration, ERC-8004 agent identity, and TEE attestation support
Major feature implementation adding decentralized identity and trust infrastructure:

**Core Contract Updates:**
- AgentRegistry: Add optional ENS integration for agent identity verification
- AgentRegistry: Integrate ERC-8004 validation registry for TEE attestation
- Implement ENSAgentHelper utility for ENS-based agent resolution
- Add comprehensive ERC-8004 registry suite:
  - AgentIdentityRegistry: Core identity management with ENS support
  - AgentReputationRegistry: On-chain reputation tracking
  - AgentValidationRegistry: Phala zkDCAP TEE attestation verification

**Smart Contract Infrastructure:**
- Add IENS, IPhalaVerifier, and ERC-8004 interfaces
- Update deployment scripts for ENS and validation registry integration
- Add mock contracts for testing (MockENSRegistry, MockPhalaVerifier)
- Comprehensive test suites for ENS and TEE integration
- Update Arbitrum Sepolia deployment addresses

**SDK Enhancements:**
- Add identity module with ENS registration and resolution
- Export ERC-8004 ABIs and TypeScript bindings
- Add AgentIdentity, AgentReputation, and AgentValidation types
- Update config to support ENS and validation registry addresses

**Frontend Updates:**
- Replace placeholder addresses with live Arbitrum Sepolia deployment
- Implement real-time stats fetching from on-chain data
- Add live market and agent count displays
- Update RPC configuration for mainnet compatibility

**Agent Tooling:**
- Add settlement guide and debugging utilities
- Implement TEE attestation scripts and helpers
- Add Docker support for Phala TEE environment
- Create demo scripts for ENS setup, settlement, and assertions
- Add LiFi bridge integration for cross-chain operations

**Development Infrastructure:**
- Update .gitignore for TEE and Docker artifacts
- Add package dependencies for identity and attestation features
- Update SKILL.md with ENS and TEE integration patterns

This commit represents Ph

--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -8,11 +8,23 @@
     "agent:beta": "tsx src/agent-beta.ts",
     "agent:human": "tsx src/human-demo.ts",
     "agent:assert": "tsx src/assert-demo.ts",
-    "yellow:demo": "tsx src/yellow/demo.ts"
+    "agent:settle": "tsx src/settle-demo.ts",
+    "agent:fresh": "tsx src/fresh-demo.ts",
+    "debug:settle": "tsx src/debug-settle.ts",
+    "debug:market": "tsx src/debug-market-state.ts",
+    "check:assertion": "tsx src/check-assertion.ts",
+    "settle:simple": "tsx src/settle-simple.ts",
+    "yellow:demo": "tsx src/yellow/demo.ts",
+    "setup:ens": "tsx src/setup-ens.ts",
+    "lifi:bridge": "tsx src/lifi-bridge.ts",
+    "tee:bootstrap": "tsx src/tee-bootstrap.ts",
+    "docker:build": "docker build -t clawlogic-agent .",
+    "phala:deploy": "phala cvms create --compose docker-compose-phala.yaml"
   },
   "dependencies": {
     "@clawlogic/sdk": "workspace:*",
     "@erc7824/nitrolite": "^0.5.2",
+    "@phala/dstack-sdk": "^0.1.7",
     "viem": "^2.0.0",
     "dotenv": "^16.4.0",
     "ws": "^8.16.0"
