--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@clawlogic/sdk": "workspace:*",
+    "@clawlogic/sdk": "^0.0.1",
     "viem": "^2.0.0"
   },
   "devDependencies": {
