--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "pnpm -r build",
-        "test": "pnpm -r test",
-        "dev:sdk": "pnpm --filter @clawlogic/sdk dev",
-        "agent:alpha": "pnpm --filter @clawlogic/agent agent:alpha",
-        "agent:beta": "pnpm --filter @clawlogic/agent agent:beta",
-        "agent:human": "pnpm --filter @clawlogic/agent agent:human"
-    },
+    "build": "pnpm -r build",
+    "test": "pnpm -r test",
+    "dev:sdk": "pnpm --filter @clawlogic/sdk dev",
+    "agent:alpha": "pnpm --filter @clawlogic/agent agent:alpha",
+    "agent:beta": "pnpm --filter @clawlogic/agent agent:beta",
+    "agent:human": "pnpm --filter @clawlogic/agent agent:human",
+    "sdk:sync-web-dep": "node scripts/sync-sdk-version.mjs",
+    "sdk:check-web-dep": "node scripts/sync-sdk-version.mjs --check"
+  },
     "devDependencies": {
         "@types/node": "^20.0.0",
         "typescript": "^5.4.0"
