feat: add brand logo and theme

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ===========================================================================
-# $CLAWLOGIC -- Root Environment Variables
+# CLAWLOGIC -- Root Environment Variables
 # ===========================================================================
 # Copy this file to .env and fill in the values.
 # NEVER commit the real .env file.
