--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -1,5 +1,5 @@
 # ===========================================================================
-# $CLAWLOGIC -- Contracts Environment Variables
+# CLAWLOGIC -- Contracts Environment Variables
 # ===========================================================================
 # Copy this file to .env and fill in the values.
 # NEVER commit the real .env file.
