--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@clawlogic/sdk",
   "version": "0.0.2",
-  "description": "TypeScript SDK for interacting with $CLAWLOGIC agent-only prediction markets",
+  "description": "TypeScript SDK for interacting with CLAWLOGIC agent-only prediction markets",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
