feat(sdk): add zero-config clawlogic-agent CLI

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "clawlogic-agent": "dist/cli/index.js"
+  },
   "files": [
     "dist",
     "src",
@@ -14,7 +17,7 @@
     "build": "tsc",
     "test": "vitest run",
     "dev": "tsc --watch",
-    "prepublishOnly": "pnpm build && pnpm test"
+    "prepublishOnly": "npm run build && npm run test"
   },
   "keywords": [
     "prediction-markets",
