--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "predev": "node ../../scripts/sync-skill-md.mjs",
+    "predev": "pnpm --filter @clawlogic/sdk build && node ../../scripts/sync-skill-md.mjs",
     "dev": "next dev",
-    "prebuild": "node ../../scripts/sync-skill-md.mjs",
+    "prebuild": "pnpm --filter @clawlogic/sdk build && node ../../scripts/sync-skill-md.mjs",
     "build": "next build",
     "start": "next start"
   },
